Very high frequency GECKO(5031) | Assertion failure: IsIdle(oldState), at /builds/worker/workspace/build/src/xpcom/ds/PLDHashTable.h:137
Categories
(Toolkit :: Performance Monitoring, defect, P5)
Tracking
()
Tracking | Status | |
---|---|---|
firefox66 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: tarek)
References
Details
(Keywords: intermittent-failure, Whiteboard: [retriggered])
Attachments
(1 file)
Filed by: ncsoregi [at] mozilla.com
https://treeherder.mozilla.org/logviewer.html#?job_id=221028541&repo=autoland
[task 2019-01-10T06:40:57.445Z] 06:40:57 INFO - TEST-START | toolkit/components/aboutperformance/tests/browser/browser_aboutperformance.js
[task 2019-01-10T06:40:57.454Z] 06:40:57 INFO - GECKO(5031) | Chrome file doesn't exist: /builds/worker/workspace/build/tests/mochitest/browser/toolkit/components/aboutperformance/tests/browser/head.js
[task 2019-01-10T06:40:57.482Z] 06:40:57 INFO - GECKO(5031) | ++DOCSHELL 0x7f12cda60800 == 6 [pid = 5031] [id = {8b275be1-31b1-4134-bbcf-cf6c4a363049}]
[task 2019-01-10T06:40:57.483Z] 06:40:57 INFO - GECKO(5031) | ++DOMWINDOW == 13 (0x7f12ce8ca400) [pid = 5031] [serial = 13] [outer = (nil)]
[task 2019-01-10T06:40:57.600Z] 06:40:57 INFO - GECKO(5031) | Couldn't convert chrome URL: chrome://branding/locale/brand.properties
[task 2019-01-10T06:40:57.608Z] 06:40:57 INFO - GECKO(5031) | ++DOMWINDOW == 14 (0x7f12ce8d0800) [pid = 5031] [serial = 14] [outer = 0x7f12ce8ca400]
[task 2019-01-10T06:40:57.852Z] 06:40:57 INFO - GECKO(5031) | [Parent 5031, Main Thread] WARNING: '!mSelection', file /builds/worker/workspace/build/src/editor/libeditor/EditorBase.cpp, line 4823
[task 2019-01-10T06:40:57.854Z] 06:40:57 INFO - GECKO(5031) | [Parent 5031, Main Thread] WARNING: '!editActionData.CanHandle()', file /builds/worker/workspace/build/src/editor/libeditor/EditorBase.cpp, line 1250
[task 2019-01-10T06:40:57.854Z] 06:40:57 INFO - GECKO(5031) | ++DOCSHELL 0x7fe9a2fd0800 == 1 [pid = 5211] [id = {da92c7d1-4411-4276-9b9f-1ed0e48d8edb}]
[task 2019-01-10T06:40:57.944Z] 06:40:57 INFO - GECKO(5031) | ++DOMWINDOW == 15 (0x7f12ce8c8c00) [pid = 5031] [serial = 15] [outer = 0x7f12ce8ca400]
[task 2019-01-10T06:40:57.960Z] 06:40:57 INFO - GECKO(5031) | ++DOMWINDOW == 1 (0x7fe9a2f5f800) [pid = 5211] [serial = 1] [outer = (nil)]
[task 2019-01-10T06:40:58.098Z] 06:40:58 INFO - GECKO(5031) | ++DOMWINDOW == 2 (0x7fe9a3e3f800) [pid = 5211] [serial = 2] [outer = 0x7fe9a2f5f800]
[task 2019-01-10T06:40:58.168Z] 06:40:58 INFO - GECKO(5031) | [Parent 5031, Main Thread] WARNING: NS_ENSURE_SUCCESS(mStatus, this) failed with result 0x804B000A: file /builds/worker/workspace/build/src/obj-firefox/dist/include/nsIURIMutator.h, line 472
[task 2019-01-10T06:40:58.168Z] 06:40:58 INFO - GECKO(5031) | [Parent 5031, Main Thread] WARNING: NS_ENSURE_SUCCESS(mStatus, mStatus) failed with result 0x804B000A: file /builds/worker/workspace/build/src/obj-firefox/dist/include/nsIURIMutator.h, line 623
[task 2019-01-10T06:40:58.249Z] 06:40:58 INFO - GECKO(5031) | ++DOMWINDOW == 3 (0x7fe9a3e4ec00) [pid = 5211] [serial = 3] [outer = 0x7fe9a2f5f800]
[task 2019-01-10T06:40:58.298Z] 06:40:58 INFO - GECKO(5031) | [Parent 5031, StreamTrans #41] WARNING: 'NS_FAILED(rv)', file /builds/worker/workspace/build/src/modules/libjar/nsJARChannel.cpp, line 372
[task 2019-01-10T06:40:58.346Z] 06:40:58 INFO - GECKO(5031) | [Parent 5031, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80520012: file /builds/worker/workspace/build/src/modules/libjar/nsJARChannel.cpp, line 1010
[task 2019-01-10T06:40:58.486Z] 06:40:58 INFO - GECKO(5031) | ### XPCOM_MEM_BLOAT_LOG defined -- logging bloat/leaks to /tmp/tmpsHt4Ap.mozrunner/runtests_leaks_tab_pid5237.log
[task 2019-01-10T06:40:58.749Z] 06:40:58 INFO - GECKO(5031) | Couldn't convert chrome URL: chrome://branding/locale/brand.properties
[task 2019-01-10T06:40:59.048Z] 06:40:59 INFO - GECKO(5031) | [Parent 5031, Main Thread] WARNING: NS_ENSURE_SUCCESS(mStatus, this) failed with result 0x804B000A: file /builds/worker/workspace/build/src/obj-firefox/dist/include/nsIURIMutator.h, line 472
[task 2019-01-10T06:40:59.049Z] 06:40:59 INFO - GECKO(5031) | [Parent 5031, Main Thread] WARNING: NS_ENSURE_SUCCESS(mStatus, mStatus) failed with result 0x804B000A: file /builds/worker/workspace/build/src/obj-firefox/dist/include/nsIURIMutator.h, line 623
[task 2019-01-10T06:40:59.091Z] 06:40:59 INFO - GECKO(5031) | ++DOCSHELL 0x7f69599cf800 == 1 [pid = 5237] [id = {a3b9b14c-620d-4939-b016-532c6809c7de}]
[task 2019-01-10T06:40:59.233Z] 06:40:59 INFO - GECKO(5031) | ++DOMWINDOW == 1 (0x7f6959907400) [pid = 5237] [serial = 1] [outer = (nil)]
[task 2019-01-10T06:40:59.412Z] 06:40:59 INFO - GECKO(5031) | ++DOMWINDOW == 2 (0x7f695a702c00) [pid = 5237] [serial = 2] [outer = 0x7f6959907400]
[task 2019-01-10T06:40:59.514Z] 06:40:59 INFO - GECKO(5031) | [Child 5237, Main Thread] WARNING: site security information will not be persisted: file /builds/worker/workspace/build/src/security/manager/ssl/nsSiteSecurityService.cpp, line 506
[task 2019-01-10T06:40:59.623Z] 06:40:59 INFO - GECKO(5031) | [Parent 5031, Main Thread] WARNING: 'NS_FAILED(rv)', file /builds/worker/workspace/build/src/netwerk/url-classifier/UrlClassifierCommon.cpp, line 122
[task 2019-01-10T06:40:59.745Z] 06:40:59 INFO - GECKO(5031) | ++DOMWINDOW == 3 (0x7f695a8b3800) [pid = 5237] [serial = 3] [outer = 0x7f6959907400]
[task 2019-01-10T06:40:59.865Z] 06:40:59 INFO - GECKO(5031) | ++DOCSHELL 0x7f6959a2f000 == 2 [pid = 5237] [id = {fdb9453d-3e73-4208-8b8e-4e8918406273}]
[task 2019-01-10T06:40:59.866Z] 06:40:59 INFO - GECKO(5031) | ++DOMWINDOW == 4 (0x7f6959906c00) [pid = 5237] [serial = 4] [outer = (nil)]
[task 2019-01-10T06:40:59.867Z] 06:40:59 INFO - GECKO(5031) | ++DOCSHELL 0x7f695a88e800 == 3 [pid = 5237] [id = {ada53414-9dd9-42d0-971e-ae30b4b841f1}]
[task 2019-01-10T06:40:59.868Z] 06:40:59 INFO - GECKO(5031) | ++DOMWINDOW == 5 (0x7f6959907000) [pid = 5237] [serial = 5] [outer = (nil)]
[task 2019-01-10T06:41:00.025Z] 06:41:00 INFO - GECKO(5031) | ++DOMWINDOW == 6 (0x7f6959563000) [pid = 5237] [serial = 6] [outer = 0x7f6959906c00]
[task 2019-01-10T06:41:00.025Z] 06:41:00 INFO - GECKO(5031) | Assertion failure: IsIdle(oldState), at /builds/worker/workspace/build/src/xpcom/ds/PLDHashTable.h:137
[task 2019-01-10T06:41:00.025Z] 06:41:00 INFO - GECKO(5031) | #01: libxul.so + 0xc77dc3
[task 2019-01-10T06:41:00.026Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.026Z] 06:41:00 INFO - GECKO(5031) | #02: libxul.so + 0xc7816b
[task 2019-01-10T06:41:00.026Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.027Z] 06:41:00 INFO - GECKO(5031) | #03: libxul.so + 0x1ccbbac
[task 2019-01-10T06:41:00.027Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.029Z] 06:41:00 INFO - GECKO(5031) | #04: libxul.so + 0x1c3252d
[task 2019-01-10T06:41:00.030Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.032Z] 06:41:00 INFO - GECKO(5031) | #05: libxul.so + 0x1c32ec5
[task 2019-01-10T06:41:00.033Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.035Z] 06:41:00 INFO - GECKO(5031) | #06: libxul.so + 0x1bd0127
[task 2019-01-10T06:41:00.037Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.038Z] 06:41:00 INFO - GECKO(5031) | #07: libxul.so + 0x3628ed9
[task 2019-01-10T06:41:00.040Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.042Z] 06:41:00 INFO - GECKO(5031) | #08: libxul.so + 0x3628978
[task 2019-01-10T06:41:00.043Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.046Z] 06:41:00 INFO - GECKO(5031) | #09: libxul.so + 0x428c0c2
[task 2019-01-10T06:41:00.048Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.050Z] 06:41:00 INFO - GECKO(5031) | #10: libxul.so + 0x428b994
[task 2019-01-10T06:41:00.052Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.054Z] 06:41:00 INFO - GECKO(5031) | #11: libxul.so + 0x429084e
[task 2019-01-10T06:41:00.055Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.061Z] 06:41:00 INFO - GECKO(5031) | #12: libxul.so + 0x4273dbf
[task 2019-01-10T06:41:00.063Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.068Z] 06:41:00 INFO - GECKO(5031) | #13: libxul.so + 0x4287966
[task 2019-01-10T06:41:00.069Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.073Z] 06:41:00 INFO - GECKO(5031) | #14: libxul.so + 0x1d0be6e
[task 2019-01-10T06:41:00.074Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.075Z] 06:41:00 INFO - GECKO(5031) | #15: libxul.so + 0x1d0bee4
[task 2019-01-10T06:41:00.077Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.078Z] 06:41:00 INFO - GECKO(5031) | #16: libxul.so + 0x44637ff
[task 2019-01-10T06:41:00.079Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.081Z] 06:41:00 INFO - GECKO(5031) | #17: libxul.so + 0x4463862
[task 2019-01-10T06:41:00.082Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.087Z] 06:41:00 INFO - GECKO(5031) | #18: libxul.so + 0x44639b7
[task 2019-01-10T06:41:00.089Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.091Z] 06:41:00 INFO - GECKO(5031) | #19: libxul.so + 0x1c20ace
[task 2019-01-10T06:41:00.093Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.095Z] 06:41:00 INFO - GECKO(5031) | #20: libxul.so + 0x4463301
[task 2019-01-10T06:41:00.101Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.103Z] 06:41:00 INFO - GECKO(5031) | #21: libxul.so + 0x30d5a0d
[task 2019-01-10T06:41:00.105Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.106Z] 06:41:00 INFO - GECKO(5031) | #22: libxul.so + 0x1293e14
[task 2019-01-10T06:41:00.109Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.110Z] 06:41:00 INFO - GECKO(5031) | #23: libxul.so + 0x11eb467
[task 2019-01-10T06:41:00.111Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.117Z] 06:41:00 INFO - GECKO(5031) | #24: libxul.so + 0x11ea712
[task 2019-01-10T06:41:00.118Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.120Z] 06:41:00 INFO - GECKO(5031) | #25: libxul.so + 0x11eabeb
[task 2019-01-10T06:41:00.121Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.124Z] 06:41:00 INFO - GECKO(5031) | #26: libxul.so + 0x11eaf23
[task 2019-01-10T06:41:00.125Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.127Z] 06:41:00 INFO - GECKO(5031) | #27: libxul.so + 0xcec19a
[task 2019-01-10T06:41:00.128Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.129Z] 06:41:00 INFO - GECKO(5031) | #28: libxul.so + 0xcee931
[task 2019-01-10T06:41:00.132Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.134Z] 06:41:00 INFO - GECKO(5031) | #29: libxul.so + 0x11ed965
[task 2019-01-10T06:41:00.135Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.137Z] 06:41:00 INFO - GECKO(5031) | #30: libxul.so + 0x11ac33d
[task 2019-01-10T06:41:00.141Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.145Z] 06:41:00 INFO - GECKO(5031) | #31: libxul.so + 0x11ac298
[task 2019-01-10T06:41:00.146Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.148Z] 06:41:00 INFO - GECKO(5031) | #32: libxul.so + 0x340327d
[task 2019-01-10T06:41:00.149Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.150Z] 06:41:00 INFO - GECKO(5031) | #33: libxul.so + 0x45fb1de
[task 2019-01-10T06:41:00.151Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.153Z] 06:41:00 INFO - GECKO(5031) | #34: libxul.so + 0x11edf1b
[task 2019-01-10T06:41:00.158Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.159Z] 06:41:00 INFO - GECKO(5031) | #35: libxul.so + 0x11ac33d
[task 2019-01-10T06:41:00.160Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.165Z] 06:41:00 INFO - GECKO(5031) | #36: libxul.so + 0x11ac298
[task 2019-01-10T06:41:00.167Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.168Z] 06:41:00 INFO - GECKO(5031) | #37: libxul.so + 0x45fae10
[task 2019-01-10T06:41:00.169Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.171Z] 06:41:00 INFO - GECKO(5031) | #38: content_process_main(mozilla::Bootstrap, int, char*) [ipc/contentproc/plugin-container.cpp:50]
[task 2019-01-10T06:41:00.173Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.174Z] 06:41:00 INFO - GECKO(5031) | #39: main [browser/app/nsBrowserApp.cpp:265]
[task 2019-01-10T06:41:00.177Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.178Z] 06:41:00 INFO - GECKO(5031) | #40: libc.so.6 + 0x20830
[task 2019-01-10T06:41:00.181Z] 06:41:00 INFO -
[task 2019-01-10T06:41:00.182Z] 06:41:00 INFO - GECKO(5031) | #41: _start
[task 2019-01-10T06:41:00.185Z] 06:41:00 INFO -
Comment hidden (Intermittent Failures Robot) |
Comment 2•6 years ago
|
||
It seems likely that this was introduced by bug 1498195, which modified this test and failed linux64/debug TV with the same error.
Trying to verify that here:
https://treeherder.mozilla.org/#/jobs?repo=mozilla-inbound&searchStr=linux64%2Cdebug%2Cbrowser-chrome-e10s-3&tochange=86cbcf2195f9d41aae9560c4028785d95003a86d&fromchange=a43422e9e4da8252bf1b48eb05206d0520b06f39
:florian - Have a look?
Comment 3•6 years ago
|
||
(In reply to Geoff Brown [:gbrown] from comment #2)
It seems likely that this was introduced by bug 1498195, which modified this test and failed linux64/debug TV with the same error.
Trying to verify that here:
https://treeherder.mozilla.org/#/jobs?repo=mozilla-inbound&searchStr=linux64%2Cdebug%2Cbrowser-chrome-e10s-3&tochange=86cbcf2195f9d41aae9560c4028785d95003a86d&fromchange=a43422e9e4da8252bf1b48eb05206d0520b06f39:florian - Have a look?
See bug 1449582 comment 2 (the same failure on OS X has symbols in the stack) and later.
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Comment 6•6 years ago
|
||
I r/b this around bug 1498195 as suggested in Comment 2 and the result is:
https://treeherder.mozilla.org/#/jobs?repo=mozilla-inbound&searchStr=linux%2Cx64%2Cdebug%2Cmochitests%2Cwith%2Ce10s%2Ctest-linux64%2Fdebug-mochitest-browser-chrome-e10s-3%2Cm-e10s%28bc3%29&tochange=86cbcf2195f9d41aae9560c4028785d95003a86d&fromchange=a43422e9e4da8252bf1b48eb05206d0520b06f39&selectedJob=221414344
Comment 7•6 years ago
|
||
(In reply to Intermittent Failures Robot from comment #5)
This is the #8 most frequent failure this week.
** This failure happened more than 75 times this week! Resolving this bug is a very high priority. **
** Try to resolve this bug as soon as possible. If unresolved for 1 week, the affected test(s) may be disabled. **
FYI Tarek, this seems to be failing more frenquently than I initially expected.
Comment 8•6 years ago
|
||
I've got patches in bug 1518932 that seems to be able to produce this crash reliably, but only on linux x64 debug.
https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=221672795&repo=try&lineNumber=10441
Assignee | ||
Comment 9•6 years ago
|
||
:baku found the issue, I'll work on a patch tomorrow when my day starts
Assignee | ||
Comment 10•6 years ago
|
||
Updated•6 years ago
|
Comment hidden (Intermittent Failures Robot) |
Assignee | ||
Comment 12•6 years ago
|
||
Assignee | ||
Comment 13•6 years ago
|
||
Comment 14•6 years ago
|
||
Comment 15•6 years ago
|
||
bugherder |
Comment hidden (Intermittent Failures Robot) |
Description
•