Bug 1519038 - Fixing Assertion failure: IsIdle(oldState) r=baku

Differential Revision: https://phabricator.services.mozilla.com/D16529

--HG--
extra : moz-landing-system : lando